# Boologic

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
boologic/: cnf.py  expressions.py
boologic/enums/: __init__.py
boologic/solvers/: __init__.py  dpll.py
tests/: conftest.py  test_cnf.py  test_dpll.py  test_expressions.py
