[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boologic"
version = "0.3.2"
description = "This is a basic library for implementing boolean propositional logic."
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "ruff>=0.15.5",
    "tool>=0.8.0",
]

authors = [
  { name = "Kartik Punna", email = "kartikpunna@gmail.com" },
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/OoXLR8oO/boologic"
Issues = "https://github.com/OoXLR8oO/boologic/issues"
Repository = "https://github.com/OoXLR8oO/boologic"

[tool.hatch.build.targets.wheel]
packages = ["boologic"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # import sorting
    "UP", # pyupgrade
]

[dependency-groups]
dev = [
    "hypothesis>=6.152.7",
    "pre-commit>=4.6.0",
    "ruff>=0.15.5",
]

